// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config editing adds config editor drawer widget 1`] = `
Object {
  "configId": Any<String>,
}
`;

exports[`Config editing creates proper FromConfigAdapter 1`] = `
Object {
  "type": "FromConfigAdapter",
}
`;
